zirconsys_monitoring/uptime_kuma/app-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: uptime-kuma
  labels:
      app.kubernetes.io/name: uptime-kuma
