zirconsys_monitoring/uptime_kuma/uptime_kuma-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: uptime-kuma
    namespace: uptime-kuma
    labels:
        app.kubernetes.io/name: uptime-kuma
spec:
    revisionHistoryLimit: 3
    replicas: 1
    strategy:
        type: RollingUpdate
    selector:
        matchLabels:
            app.kubernetes.io/name: uptime-kuma
    template:
        metadata:
            labels:
                app.kubernetes.io/name: uptime-kuma
        spec:
            automountServiceAccountToken: true
            dnsPolicy: ClusterFirst
            enableServiceLinks: true
            containers:
                - name: homepage
                  image: "louislam/uptime-kuma:latest"
                  resources:
                    requests:
                      memory: "64Mi"
                      cpu: "250m"
                    limits:
                      memory: "256Mi"
                      cpu: "500m"
                  imagePullPolicy: IfNotPresent
                  ports:
                      - name: http
                        containerPort: 3001
                        protocol: TCP
                  volumeMounts:
                      - name: uptime-kuma-pv
                        mountPath: "/app/data"
            volumes:
                - name: uptime-kuma-pv
                  persistentVolumeClaim:
                  claimName: uptime-kuma-pvc
