zirconsys_monitoring/uptime_kuma/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: uptime-kuma-svc
    namespace: uptime-kuma
    labels:
        app.kubernetes.io/name: uptime-kuma
    annotations: {}
spec:
    type: ClusterIP
    ports:
        - port: 3001
          targetPort: http
          protocol: TCP
          name: http
    selector:
        app.kubernetes.io/name: uptime-kuma
