zirconsys_monitoring/uptime_kuma/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: uptime-kuma-ingress
    namespace: uptime-kuma
    labels:
        app.kubernetes.io/name: uptime-kuma
spec:
    ingressClassName: zirconsys-ingress
    rules:
        - host: "uptime.zirconsys.cloud"
          http:
              paths:
                  - path: "/"
                    pathType: Prefix
                    backend:
                        service:
                            name: uptime-kuma-svc
                            port:
                                number: 3000
